<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back" />
    <!-- Tabs Navigation -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/tabDetails"
            android:textSize="10sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/details" />

        <Button
            android:id="@+id/tabWaitlist"
            android:textSize="10sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/waitlist" />

        <Button
            android:id="@+id/tabAttendees"
            android:textSize="10sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/attendees" />

        <Button
            android:id="@+id/tabLocations"
            android:textSize="10sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/locations" />
    </LinearLayout>
    <!-- Confirmed Header -->
    <TextView
        android:id="@+id/confirmedHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmed"
        android:textSize="18sp"
        android:layout_marginTop="24dp"/>

    <!-- Confirmed RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewConfirmed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

    <!-- Waitlist Header -->
    <TextView
        android:id="@+id/waitlistHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waiting"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>

    <!-- Waitlist RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewWaitlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

    <!-- Cancelled Header -->
    <TextView
        android:id="@+id/cancelledHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelled"
        android:textSize="18sp"
        android:layout_marginTop="24dp"/>

    <!-- Cancelled RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCancelled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>
</LinearLayout>
